Feature/MP-3186 default_shapes_graph_iri